@@ -1,3 +1,7 @@
+2008-09-30  Alan Modra  <amodra@bigpond.net.au>
+
+	* ld-elf/extract-symbol-1sec.d: Correct section lma.
+
 2008-09-22  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* ld-mips-elf/reloc-estimate-1.d: Make endian-neutral.
